# hugepagedemo

./: Cargo.toml  Makefile  README.md  aligned_alloc_demo.c
src/: anyos_hugepages.rs  lib.rs  linux_hugepages.rs  main.rs  mmaputils.rs  notlinux_hugepages.rs
