[package]
name = "hugepagedemo"
version = "0.1.0"
edition = "2021"
default-run = "hugepagedemo"
description = "Demonstration of the performance impact of huge pages in the Linux kernel."
license = "MIT"
repository = "https://github.com/evanj/hugepagedemo"
keywords = ["page", "hugepage", "madvise", "thp", "tlb"]
categories = ["command-line-utilities"]

[profile.release-nativecpu]
inherits = "release"
debug = true
# still unstable: https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#profile-rustflags-option
# this is defined for make run_native
# TODO: Uncomment once stable
#rustflags = ["-C", "target-cpu=native"]

[dependencies]
argh = "0.1.9"
go-parse-duration = "0"
humanunits = {git="https://github.com/evanj/humanunits"}
lazy_static = "1"
memory-stats = "1"
nix = {version="0", features=["mman"]}
rand = "0"
rand_xoshiro = "0"
regex = "1"
strum = { version = "0", features = ["derive"] }
time = { version="0", features=["std"]}
