[package]
name = "hugepagedemo"
version = "0.1.0"
edition = "2024"
default-run = "hugepagedemo"
description = "Demonstration of the performance impact of huge pages in the Linux kernel."
license = "MIT"
repository = "https://github.com/evanj/hugepagedemo"
keywords = ["page", "hugepage", "madvise", "thp", "tlb"]
categories = ["command-line-utilities"]
publish = false

[lints.clippy]
cargo = "deny"
nursery = "deny"
pedantic = "deny"
style = "deny"
cast_possible_truncation = { level = "allow", priority = 1 }
cast_precision_loss = { level = "allow", priority = 1 }
cast_sign_loss = { level = "allow", priority = 1 }
missing_errors_doc = { level = "allow", priority = 1 }
missing_panics_doc = { level = "allow", priority = 1 }
multiple-crate-versions = { level = "allow", priority = 1 }
too_many_lines = { level = "allow", priority = 1 }

[profile.release-nativecpu]
inherits = "release"
debug = true
# still unstable: https://doc.rust-lang.org/nightly/cargo/reference/unstable.html#profile-rustflags-option
# this is defined for make run_native
# TODO: Uncomment once stable
#rustflags = ["-C", "target-cpu=native"]

[dependencies]
clap = { version="4", features = ["derive"] }
go-parse-duration = "0"
humanunits = { git="https://github.com/evanj/humanunits" }
memory-stats = "1"
nix = { version="0", features=["mman", "feature"] }
rand = { version="0" }
regex = "1"
strum = { version = "0", features = ["derive"] }
time = { version="0", features=["std"]}
